--- a/test/fixtures/projects.yml
+++ b/test/fixtures/projects.yml
@@ -3,7 +3,7 @@ projects_001:
   created_on: 2006-07-19 19:13:59 +02:00
   name: eCookbook
   updated_on: 2006-07-19 22:53:01 +02:00
-  projects_count: 3
+  #projects_count: 3
   id: 1
   description: Recipes management application
   homepage: http://ecookbook.somenet.foo/
@@ -14,7 +14,7 @@ projects_002:
   created_on: 2006-07-19 19:14:19 +02:00
   name: OnlineStore
   updated_on: 2006-07-19 19:14:19 +02:00
-  projects_count: 0
+  #projects_count: 0
   id: 2
   description: E-commerce web site
   homepage: ""
@@ -25,7 +25,7 @@ projects_003:
   created_on: 2006-07-19 19:15:21 +02:00
   name: eCookbook Subproject 1
   updated_on: 2006-07-19 19:18:12 +02:00
-  projects_count: 0
+  #projects_count: 0
   id: 3
   description: eCookBook Subproject 1
   homepage: ""
@@ -36,7 +36,7 @@ projects_004:
   created_on: 2006-07-19 19:15:51 +02:00
   name: eCookbook Subproject 2
   updated_on: 2006-07-19 19:17:07 +02:00
-  projects_count: 0
+  #projects_count: 0
   id: 4
   description: eCookbook Subproject 2
   homepage: ""
@@ -47,7 +47,7 @@ projects_005:
   created_on: 2006-07-19 19:15:51 +02:00
   name: Private child of eCookbook
   updated_on: 2006-07-19 19:17:07 +02:00
-  projects_count: 0
+  #projects_count: 0
   id: 5
   description: This is a private subproject of a public project
   homepage: ""
